--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -5,7 +5,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: npm install
-      - run: npm run lint
+      - run: make setup
+      - run: make start
+      - run: make lint
       - name: run tests
-        run: npm test
+        run: make test
