--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - run: make setup
       - run: make start
       - run: make lint
